David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repair_Asset_Photos_Google_Drive__c.field-meta.xml
<CustomField>
    <fullName>Repair_Asset_Photos_Google_Drive__c</fullName>
    <formula>HYPERLINK(ProductItem__r.Image_Link_for_Customer_Portal__c, ProductItem__r.Image_Link_for_Customer_Portal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Asset Photos (Google Drive)</label>
    <type>Text</type>
</CustomField>