David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repair_Level__c.field-meta.xml
<CustomField>
    <fullName>Repair_Level__c</fullName>
    <label>Repair Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Repair_Levels</valueSetName>
    </valueSet>
</CustomField>