David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repair_Probe_Asset__c.field-meta.xml
<CustomField>
    <fullName>Repair_Probe_Asset__c</fullName>
    <formula>Opportunity__r.Related_Asset__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Probe Asset #</label>
    <type>Text</type>
</CustomField>