David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repair_Probe_SN__c.field-meta.xml
<CustomField>
    <fullName>Repair_Probe_SN__c</fullName>
    <formula>Opportunity__r.Related_Asset__r.Serial_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Probe SN</label>
    <type>Text</type>
</CustomField>