David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repair_turned_to_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Repair_turned_to_Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repair turned to Exchange</label>
    <type>Checkbox</type>
</CustomField>