David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repairnership_Customer__c.field-meta.xml
<CustomField>
    <fullName>Repairnership_Customer__c</fullName>
    <formula>Opportunity__r.Account.Repairnership_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repairnership Customer</label>
    <type>Checkbox</type>
</CustomField>