David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repairs_Approved__c.field-meta.xml
<CustomField>
    <fullName>Repairs_Approved__c</fullName>
    <label>Repairs Approved (Old Field)</label>
    <type>TextArea</type>
</CustomField>