David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repairs_Completed__c.field-meta.xml
<CustomField>
    <fullName>Repairs_Completed__c</fullName>
    <label>Percent Repairs Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>