David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Repairs_Declined__c.field-meta.xml
<CustomField>
    <fullName>Repairs_Declined__c</fullName>
    <label>Repairs Declined</label>
    <type>TextArea</type>
</CustomField>