David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Replacement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked manually if the replacement has been sent.</description>
    <label>Replacement Sent</label>
    <type>Checkbox</type>
</CustomField>