David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Replacement_Status__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Status__c</fullName>
    <formula>IF( ISBLANK(Date_RMA_Item_Received__c), &quot;Not Received&quot;, &quot;Received&quot;)</formula>
    <label>Replacement Status</label>
    <type>Text</type>
</CustomField>