David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>