David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Required_Repair_Price__c.field-meta.xml
<CustomField>
    <fullName>Required_Repair_Price__c</fullName>
    <description>Enter the Required Repair Price on the Repair Evaluation form</description>
    <label>Required Repair Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>