David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Required_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Required_Repairs__c</fullName>
    <label>Required Repairs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>