David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Restock_Fee_Percentage_Override__c.field-meta.xml
<CustomField>
    <fullName>Restock_Fee_Percentage_Override__c</fullName>
    <label>Restock Fee Percentage - Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>