David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Restocking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Restocking_Fee__c</fullName>
    <label>Restocking Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>