David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Restocking_Fee_Reason__c.field-meta.xml
<CustomField>
    <fullName>Restocking_Fee_Reason__c</fullName>
    <label>Restocking Fee Reason</label>
    <type>TextArea</type>
</CustomField>