David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Return_Asset_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Return_Asset_to_Vendor__c</fullName>
    <label>Return Asset to Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>