David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Return_from_Sale_Action__c.field-meta.xml
<CustomField>
    <fullName>Return_from_Sale_Action__c</fullName>
    <label>Return from Sale Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charge customer for damage</fullName>
            </value>
            <value>
                <fullName>Repair without charging customer for damage</fullName>
            </value>
            <value>
                <fullName>Credit memo</fullName>
            </value>
            <value>
                <fullName>Restocking fee</fullName>
            </value>
            <value>
                <fullName>No further action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>