David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Return_from_Sale_Action_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Return_from_Sale_Action_Approved_By__c</fullName>
    <label>Return from Sale Action Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>