David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Return_from_Sale_Approval__c.field-meta.xml
<CustomField>
    <fullName>Return_from_Sale_Approval__c</fullName>
    <label>Return from Sale Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>NOT APPROVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>