David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Return_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>