David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Return_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Address__c</fullName>
    <formula>TRIM(IF(NOT(ISBLANK(Return_to_Address_Override__c)), Return_to_Address_Override__c, 
if(ISBLANK(Return_to_Account__r.ShippingStreet), &apos;&apos;, Return_to_Account__r.ShippingStreet &amp; &apos; &apos;) 
&amp;
if(ISBLANK(Return_to_Account__r.ShippingCity), &apos;&apos;, Return_to_Account__r.ShippingCity &amp; &apos;, &apos;)
&amp;
if(ISBLANK(Return_to_Account__r.ShippingState), &apos;&apos;, Return_to_Account__r.ShippingState &amp; &apos; &apos;)
&amp;
if(ISBLANK(Return_to_Account__r.ShippingPostalCode), &apos;&apos;, Return_to_Account__r.ShippingPostalCode)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return to Address</label>
    <type>Text</type>
</CustomField>