David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Return_to_Address_Override__c.field-meta.xml
<CustomField>
    <fullName>Return_to_Address_Override__c</fullName>
    <label>Return to Address Override</label>
    <type>TextArea</type>
</CustomField>