David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Return_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Return_To_Location__c</fullName>
    <label>Return To Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fishers, IN</fullName>
            </value>
            <value>
                <fullName>Tampa, FL</fullName>
            </value>
            <value>
                <fullName>Tulsa, OK</fullName>
            </value>
            <value>
                <fullName>Harrisburg, PA</fullName>
            </value>
            <value>
                <fullName>Return to Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>