David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Returned_In_Worse_Condition__c.field-meta.xml
<CustomField>
    <fullName>Returned_In_Worse_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Item returned in worse condition than when we sent it out to customer</description>
    <label>Returned In Worse Condition</label>
    <type>Checkbox</type>
</CustomField>