David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/RMA_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>RMA_Asset_Amount__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Work_Order__c)),
  0,
  ProductItem__r.Sales_Price__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Item Asset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>