David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/RMA_Item_Asset_Cost__c.field-meta.xml
<CustomField>
    <fullName>RMA_Item_Asset_Cost__c</fullName>
    <description>Tracking cost for RMA Items to sync to Intacct for GL entry</description>
    <formula>ProductItem__r.Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Item Asset Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>