David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/RMA_Item_Asset_Sold__c.field-meta.xml
<CustomField>
    <fullName>RMA_Item_Asset_Sold__c</fullName>
    <formula>IF(ProductItem__r.sold__c = TRUE, TRUE, FALSE)</formula>
    <label>RMA Item Asset Sold?</label>
    <type>Checkbox</type>
</CustomField>