David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/RMA_Item_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Item_Serial_Number__c</fullName>
    <label>RMA Item SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>