David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/RMA_Resolution__c.field-meta.xml
<CustomField>
    <fullName>RMA_Resolution__c</fullName>
    <label>RMA Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>