David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/RMA_Stamp_Date__c.field-meta.xml
<CustomField>
    <fullName>RMA_Stamp_Date__c</fullName>
    <label>RMA Stamp Date</label>
    <type>Date</type>
</CustomField>