David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/RMA_Tracking__c.field-meta.xml
<CustomField>
    <fullName>RMA_Tracking__c</fullName>
    <description>Field to record the tracking information for when an RMA is returned</description>
    <label>RMA Tracking #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>