David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/RMA_Type__c.field-meta.xml
<CustomField>
    <fullName>RMA_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RMA Type</label>
    <type>Text</type>
</CustomField>