David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Rod_Lenses_to_Replace__c.field-meta.xml
<CustomField>
    <fullName>Rod_Lenses_to_Replace__c</fullName>
    <label>Rod Lenses to Replace</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>