David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause (5 Whys)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>