David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Root_Cause_Notes__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Notes__c</fullName>
    <label>Root Cause Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>