David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Run_Shipment_Flow__c.field-meta.xml
<CustomField>
    <fullName>Run_Shipment_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Shipment Flow</label>
    <type>Checkbox</type>
</CustomField>