David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Sales_Notes_for_Damaged_Loaner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notes_for_Damaged_Loaner__c</fullName>
    <label>Sales Notes for Damaged Loaner</label>
    <type>TextArea</type>
</CustomField>