David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Send_RMA_Details_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_RMA_Details_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send RMA Details Email</label>
    <type>Checkbox</type>
</CustomField>