David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>