David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Ship_Receipt_Delta__c.field-meta.xml
<CustomField>
    <fullName>Ship_Receipt_Delta__c</fullName>
    <formula>IF ( 
ISBLANK (Date_RMA_Item_Received__c),
TODAY() - Date_Opportunity_Item_Shipped__c ,
IF ( 
(Date_RMA_Item_Received__c - Date_Opportunity_Item_Shipped__c) &lt; 0,
0,
Date_RMA_Item_Received__c - Date_Opportunity_Item_Shipped__c
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship/Receipt Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>