David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Shipping_Account_to_Bill__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_to_Bill__c</fullName>
    <inlineHelpText>Defaults to account preference, this controls what account is billed when shipping generates a shipping label</inlineHelpText>
    <label>Shipping Account to Bill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Default_Shipping_Account</valueSetName>
    </valueSet>
</CustomField>