David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Shipping_FROM_Location__c.field-meta.xml
<CustomField>
    <fullName>Shipping_FROM_Location__c</fullName>
    <formula>TEXT(Opportunity__r.Shipping_FROM_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping FROM Location</label>
    <type>Text</type>
</CustomField>