David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Shipping_from_Location_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Shipping_from_Location_Address_Line_1__c</fullName>
    <formula>IF(Shipping_FROM_Location__c = &apos;Fishers, IN&apos;, &apos;9715 Kincaid Dr, #1000&apos;, IF(Shipping_FROM_Location__c = &apos;Tulsa, OK&apos;, &apos;9433 E. 51st St., Ste. 1&apos;, IF(Shipping_FROM_Location__c = &apos;Tampa, FL&apos;,  &apos;5735 Benjamin Center Dr.&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping from Location Address Line 1</label>
    <type>Text</type>
</CustomField>