David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Shipping_from_Location_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_from_Location_Address_Line_2__c</fullName>
    <formula>IF(Shipping_FROM_Location__c = &apos;Fishers, IN&apos;, &apos;Fishers, IN 46037&apos;, IF(Shipping_FROM_Location__c = &apos;Tulsa, OK&apos;, &apos;Tulsa, OK 74133&apos;, IF(Shipping_FROM_Location__c = &apos;Tampa, FL&apos;,  &apos;Tampa, FL 33634&apos;, &apos;&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping from Location Address Line 2</label>
    <type>Text</type>
</CustomField>