David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Shipping_From_Location_Company__c.field-meta.xml
<CustomField>
    <fullName>Shipping_From_Location_Company__c</fullName>
    <formula>IF(Shipping_FROM_Location__c = &apos;Harrisburg, PA&apos;, &apos;Trisonics&apos;, IF(Shipping_FROM_Location__c = &apos;Tampa, FL&apos;, &apos;MedCorp&apos;, &apos;Probo Medical&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping From Location Company</label>
    <type>Text</type>
</CustomField>