David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Specific_Issue__c.field-meta.xml
<CustomField>
    <fullName>Specific_Issue__c</fullName>
    <label>Specific Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4D port on backwards</fullName>
            </value>
            <value>
                <fullName>Aftermarket arrays</fullName>
            </value>
            <value>
                <fullName>Articulation issue</fullName>
            </value>
            <value>
                <fullName>ASIC issue</fullName>
            </value>
            <value>
                <fullName>Bad airscan</fullName>
            </value>
            <value>
                <fullName>Bent housing</fullName>
            </value>
            <value>
                <fullName>Broken/bent pins</fullName>
            </value>
            <value>
                <fullName>Cable too short</fullName>
            </value>
            <value>
                <fullName>Cable whitening</fullName>
            </value>
            <value>
                <fullName>Cap (bubble)</fullName>
            </value>
            <value>
                <fullName>Cap (coming off)</fullName>
            </value>
            <value>
                <fullName>Cap (cosmetic)</fullName>
            </value>
            <value>
                <fullName>Cap (leaking oil)</fullName>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Connector boards</fullName>
            </value>
            <value>
                <fullName>Connector housing paint chipped</fullName>
            </value>
            <value>
                <fullName>Connector will not connect properly</fullName>
            </value>
            <value>
                <fullName>Cracked/broken connector housing</fullName>
            </value>
            <value>
                <fullName>Cracked probe handle</fullName>
            </value>
            <value>
                <fullName>Cut in cable</fullName>
            </value>
            <value>
                <fullName>CW</fullName>
            </value>
            <value>
                <fullName>Damaged array</fullName>
            </value>
            <value>
                <fullName>Dent in cable/wrinkled</fullName>
            </value>
            <value>
                <fullName>Does not register</fullName>
            </value>
            <value>
                <fullName>Down button not working</fullName>
            </value>
            <value>
                <fullName>Dropout (First Call)</fullName>
            </value>
            <value>
                <fullName>Dropout (Shadow)</fullName>
            </value>
            <value>
                <fullName>Failing leakage</fullName>
            </value>
            <value>
                <fullName>High capacitance</fullName>
            </value>
            <value>
                <fullName>Image blinking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>