David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Synced with Intacct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>