David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Strain_Relief__c.field-meta.xml
<CustomField>
    <fullName>Strain_Relief__c</fullName>
    <label>Strain Relief</label>
    <length>255</length>
    <type>Text</type>
</CustomField>