David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Product Test</label>
    <referenceTo>ProductTest__c</referenceTo>
    <relationshipLabel>RMAS</relationshipLabel>
    <relationshipName>RMAS</relationshipName>
    <type>Lookup</type>
</CustomField>