David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/The_Date_Last_Test_Completed__c.field-meta.xml
<CustomField>
    <fullName>The_Date_Last_Test_Completed__c</fullName>
    <label>The Date Last Test Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>