David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/The_Date_Repair_Completed__c.field-meta.xml
<CustomField>
    <fullName>The_Date_Repair_Completed__c</fullName>
    <label>The Date Repair Completed</label>
    <type>Date</type>
</CustomField>