David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/These_Repairs_Cannot_Be_Done__c.field-meta.xml
<CustomField>
    <fullName>These_Repairs_Cannot_Be_Done__c</fullName>
    <label>These Repairs Cannot Be Done</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>