David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>Given by the customer</description>
    <label>Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>