David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Time_Return_from_Sale_Action_Approved__c.field-meta.xml
<CustomField>
    <fullName>Time_Return_from_Sale_Action_Approved__c</fullName>
    <label>Time Return from Sale Action Approved</label>
    <type>DateTime</type>
</CustomField>