David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Time_Warranty_Claim_Approved__c.field-meta.xml
<CustomField>
    <fullName>Time_Warranty_Claim_Approved__c</fullName>
    <label>Time Warranty/Loaner Action Approved</label>
    <type>DateTime</type>
</CustomField>