David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Tip__c.field-meta.xml
<CustomField>
    <fullName>Tip__c</fullName>
    <label>Tip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>