David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Total_Cost_Temp__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Temp__c</fullName>
    <formula>ProductItem__r.Total_Cost_of_Assets_Used_in_Repair__c +  ProductItem__r.Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Temp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>