David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Total_Days_Out__c.field-meta.xml
<CustomField>
    <fullName>Total_Days_Out__c</fullName>
    <formula>Date_RMA_Item_Received__c -  Date_Opportunity_Item_Shipped__c</formula>
    <label>Total Days Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>