David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Total_RMA_Asset_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_RMA_Asset_Cost__c</fullName>
    <formula>ProductItem__r.Cost__c +  ProductItem__r.Total_Cost_of_Assets_Used_in_Repair__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total RMA Asset Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>