David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Tracking_No_from_Opp__c.field-meta.xml
<CustomField>
    <fullName>Tracking_No_from_Opp__c</fullName>
    <formula>Opportunity__r.Tracking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking No (from Opp)</label>
    <type>Text</type>
</CustomField>