David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Tracking_number_of_RMA_Item_Received__c.field-meta.xml
<CustomField>
    <fullName>Tracking_number_of_RMA_Item_Received__c</fullName>
    <label>Tracking # of RMA Item Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>