David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Type_of_Nonconformity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Nonconformity__c</fullName>
    <description>To explain the type of non-conformity that is reported</description>
    <label>Type of Non-Conformity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Compliant</fullName>
                <label>Customer Complaint</label>
            </value>
            <value>
                <fullName>External DOA</fullName>
            </value>
            <value>
                <fullName>External Warranty</fullName>
            </value>
            <value>
                <fullName>Return Unused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>