David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Vendor_RMA__c.field-meta.xml
<CustomField>
    <fullName>Vendor_RMA__c</fullName>
    <description>An RMA # provided by a vendor we purchased/sourced a product from.</description>
    <label>Vendor RMA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>