David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Vendor_Sourcing_on_Opp__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Sourcing_on_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for controlling visibility of other fields on RMA related to objects that are related to related objects (2nd cousins)</description>
    <label>Vendor Sourcing on Opp</label>
    <type>Checkbox</type>
</CustomField>