David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Vendor_Warranty_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Warranty_Expiration_Date__c</fullName>
    <label>Vendor Warranty Expiration Date</label>
    <type>Date</type>
</CustomField>