David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Warranty_Claim__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The warranty claim the RMA is associated with</description>
    <label>Warranty Claim</label>
    <referenceTo>Warranty_Claim__c</referenceTo>
    <relationshipLabel>RMAs</relationshipLabel>
    <relationshipName>RMAs</relationshipName>
    <type>Lookup</type>
</CustomField>