David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Warranty_Claim_Action__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim_Action__c</fullName>
    <label>Warranty Claim Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charge customer for damage</fullName>
            </value>
            <value>
                <fullName>Credit memo</fullName>
            </value>
            <value>
                <fullName>Credit memo - restocking fee</fullName>
            </value>
            <value>
                <fullName>No further action required</fullName>
            </value>
            <value>
                <fullName>Repair damage listed in warranty claim</fullName>
            </value>
            <value>
                <fullName>Repair without charging customer for damage</fullName>
            </value>
            <value>
                <fullName>Warranty claim declined</fullName>
            </value>
            <value>
                <fullName>Credit memo and change opp to &quot;Closed Lost&quot;</fullName>
                <isActive>false</isActive>
                <label>Credit memo and change opp to &quot;Closed Lost&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>