David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Warranty_Claim_Approved__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim_Approved__c</fullName>
    <label>Warranty Claim Action Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>NOT APPROVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>