David 2 Probo medical/force-app/main/default/objects/RMA__c/fields/Warranty_Claim_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Claim_Approved_By__c</fullName>
    <label>Warranty Claim Action Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>